fixed an issue where on small divices the touch pad will not appear on screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -167,8 +167,21 @@ a {
 }
 
 @media only screen and (max-width: 450px) {
+  .game-name {
+    font-size: 2rem;
+  }
   .socials a {
     font-size: 1.5rem;
+    padding: .25rem 1rem;
+  }
+
+  #scores > h2 {
+    font-size: 1.5rem;
+    padding: 0.25rem 1rem;
+  }
+
+  .button-wrap{
+      padding: .5rem;
   }
 }
 
